@@ -65,4 +65,5 @@
 - Void mace now consumes runes correctly
 - Add remote kicking support to the Management Server
 - Added Christmas Event :)
+- Added snow toggle to client config
 < --- ABOVE Released December 4, 2021 https://gitlab.com/2009scape/2009scape/-/tags/Dec-4-2021 ---- >
